Add checker framework and initial signedness annotations